# qooperate

./: .gitignore  EXPERIMENTS.md  README.md
code/: .gitignore  README.md  pyproject.toml
code/config/exp0/: exp0_n100_s123.yaml  exp0_n100_s3210.yaml  exp0_n900_s123.yaml  exp0_n900_s3210.yaml
code/config/exp1/: exp1_ter_k12_s5.yaml  exp1_ter_k12_s555555.yaml  exp1_ter_k4_s5.yaml  exp1_ter_k4_s555555.yaml  exp1_ter_k8_s5.yaml  exp1_ter_k8_s555555.yaml  exp1_tla_k12_s5.yaml  exp1_tla_k12_s555555.yaml  exp1_tla_k4_s5.yaml  exp1_tla_k4_s555555.yaml  exp1_tla_k8_s5.yaml  exp1_tla_k8_s555555.yaml  exp1_tws_k12_s5.yaml  exp1_tws_k12_s555555.yaml  exp1_tws_k4_s5.yaml  exp1_tws_k4_s555555.yaml  exp1_tws_k8_s5.yaml  exp1_tws_k8_s555555.yaml
code/config/exp2/: exp2_a001_s11.yaml  exp2_a001_s2358.yaml  exp2_a005_s11.yaml  exp2_a005_s2358.yaml  exp2_a01_s11.yaml  exp2_a01_s2358.yaml  exp2_a02_s11.yaml  exp2_a02_s2358.yaml  exp2_a05_s11.yaml  exp2_a05_s2358.yaml
code/config/exp3/: exp3_e001_s111222.yaml  exp3_e001_s21.yaml  exp3_e005_s111222.yaml  exp3_e005_s21.yaml  exp3_e01_s111222.yaml  exp3_e01_s21.yaml  exp3_e02_s111222.yaml  exp3_e02_s21.yaml  exp3_e03_s111222.yaml  exp3_e03_s21.yaml
code/config/expa2/: expa2_r1.yaml  expa2_r2.yaml  expa2_r3.yaml
code/experiments/: figures.py  generate_yamls.py  overlay.py  run.py
code/report/: metadata.tex
code/results/exp0/: exp0_n100_s123.parquet  exp0_n100_s3210.parquet  exp0_n900_s123.parquet  exp0_n900_s3210.parquet
code/results/exp1/: exp1_ter_k12_s5.parquet  (+17 more)
code/tests/: test_phase4_network.py  test_phase5_integration.py
(+30 files in other folders)
