[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qooperate"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
